OptiX render fails with scene with many translucent planes on Linux. #72470

Closed
opened 2019-12-16 05:52:01 +01:00 by Chris M · 7 comments

System Information
Operating system: Linux-5.3.0-24-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
Worked: (optional)

Short description of error
I have a scene based the CGGeek forest tutorial (https://www.youtube.com/watch?v=72LPW4S8bns) where OptiX fails to render about halfway through with:
OptiX CUDA error CUDA_ERROR_ILLEGAL_ADDRESS in cuStreamSynchronize(cuda_stream[thread_index]), line 671

It renders fine when CUDA is selected in preferences, and viewport renders also work fine.

There are many transparent or translucent planes in the scene, and Max Bounces for Transparency is set to 128. Reducing the number of objects or turning Max Bounces down makes the error go away.

Exact steps for others to reproduce the error
forest_bugreport.blend

  1. Download and open the attached .blend file.
  2. In Preferences, select OptiX under Cycles Render Devices.
  3. Render the scene. You should see the error about half way through.
**System Information** Operating system: Linux-5.3.0-24-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` Worked: (optional) **Short description of error** I have a scene based the CGGeek forest tutorial (https://www.youtube.com/watch?v=72LPW4S8bns) where OptiX fails to render about halfway through with: OptiX CUDA error CUDA_ERROR_ILLEGAL_ADDRESS in cuStreamSynchronize(cuda_stream[thread_index]), line 671 It renders fine when CUDA is selected in preferences, and viewport renders also work fine. There are many transparent or translucent planes in the scene, and Max Bounces for Transparency is set to 128. Reducing the number of objects or turning Max Bounces down makes the error go away. **Exact steps for others to reproduce the error** [forest_bugreport.blend](https://archive.blender.org/developer/F8224794/forest_bugreport.blend) 1. Download and open the attached .blend file. 2. In Preferences, select OptiX under Cycles Render Devices. 3. Render the scene. You should see the error about half way through.
Author

Added subscriber: @cmal

Added subscriber: @cmal
Member

Added subscribers: @pmoursnv, @lichtwerk

Added subscribers: @pmoursnv, @lichtwerk
Member

@pmoursnv: cant check here [no RTX], can you confirm?

@pmoursnv: cant check here [no RTX], can you confirm?
Member

Can reproduce. Happens because OptiX always uses record-all behavior for shadow rays, which uses a fixed stack of 64 hits, which is exceeded with 128 bounces. Will commit a fix later.

Can reproduce. Happens because OptiX always uses record-all behavior for shadow rays, which uses a fixed stack of 64 hits, which is exceeded with 128 bounces. Will commit a fix later.

This issue was referenced by blender/cycles@b5008f5790

This issue was referenced by blender/cycles@b5008f579057f2408c29ff4f518e32b5b3c1911e

This issue was referenced by 1d149f6746

This issue was referenced by 1d149f6746a00cb49df202b1c49fcff4264dd226
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Patrick Mours self-assigned this 2020-01-10 15:53:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72470
No description provided.