Fix T72470: OptiX render fails with scene with many translucent planes on Linux.

OptiX always uses record-all behavior for transparent shadow rays, but did not check
whether the maximum number of hits exceeded the shadow hit stack. This fixes that.